Started on making the character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProgrammingShopDemo")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ProgrammingShopDemoGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/MyShop_BP.MyShop_BP_C
+EditorStartupMap=/Game/ShopDemoLevel.ShopDemoLevel
+GameDefaultMap=/Game/ShopDemoLevel.ShopDemoLevel
+
